small refactor for enable section

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -33,23 +33,8 @@
   margin-top: 1em;
 }
 
-.enable-btn-label-a {
-  font-weight: 300;
-  font-size: 18px;
-}
-
-.enable-btn-label-b {
-  font-weight: 300;
-  font-size: 14px;
-}
-
-.enable-column-a {
+.enable-description {
   display: flex;
   flex-direction: column;
   margin-right: 0.8em;
-}
-
-.enable-column-b {
-  display: flex;
-  flex-direction: row;
 }
