--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,7 @@
 @import 'animations';
 @import 'buttons';
 @import 'forms';
+@import 'details';
 @import 'settings';
 @import 'main';
 @import 'themes';
