--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,13 +4,22 @@
 //
 // Use of this source code is governed by the LICENSE file in this repository.
 
+// base
 @import 'variables';
 @import 'reset';
+
+// utilities
 @import 'mixins';
 @import 'animations';
+
+// elements
 @import 'buttons';
 @import 'forms';
 @import 'details';
+
+// pages
 @import 'settings';
+
+// general
 @import 'main';
 @import 'themes';
