adding clarity of which build history item is being viewed

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -507,10 +507,6 @@ nav {
   fill: var(--color-bg);
 }
 
-.-build-status-icon.-pending {
-  fill: var(--color-bg);
-}
-
 .build .status.-pending {
   background: var(--color-bg-light);
 }
@@ -695,11 +691,20 @@ nav {
   margin-left: 3em;
 }
 
-.build-history .-build {
+.recent-build {
   position: relative;
 }
 
-.build-history .-build .-icon {
+.recent-build.-current {
+  transition: 0.25s;
+  > svg {
+    margin: 0 5px;
+    border-radius: 3px;
+    transition: 0.25s;
+  }
+}
+
+.build-history .recent-build .-icon {
   fill: none;
   stroke: var(--color-bg);
 
@@ -724,7 +729,7 @@ nav {
   }
 }
 
-.build-history .-build .-tooltip {
+.recent-build .tooltip {
   position: absolute;
   top: 125%;
   // not sure what to here to display the tooltip on top!
@@ -748,13 +753,13 @@ nav {
   visibility: hidden;
 }
 
-.build-history .-build:hover .-tooltip,
-.build-history .-build:focus .-tooltip {
+.recent-build:hover .tooltip,
+.recent-build:focus .tooltip {
   visibility: visible;
 }
 
-.build-history .-build:hover .-tooltip::after,
-.build-history .-build:focus .-tooltip::after {
+.recent-build:hover .tooltip::after,
+.recent-build:focus .tooltip::after {
   position: absolute;
   bottom: 100%; /* At the top of the tooltip */
 
@@ -768,13 +773,13 @@ nav {
   content: ' ';
 }
 
-.build-history .-build .-info {
+.build-history .recent-build .-info {
   padding: 0.2em 0.6em;
 
   font-size: 14px;
 }
 
-.build-history .-build .-line {
+.build-history .recent-build .-line {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -792,7 +797,7 @@ nav {
   justify-content: flex-start;
 }
 
-.build-history .-build .-number {
+.build-history .recent-build .-number {
   margin-right: 0.5em;
 
   &:before {
@@ -800,7 +805,7 @@ nav {
   }
 }
 
-.build-history .-build .-event {
+.build-history .recent-build .-event {
   font-style: italic;
 }
 
