--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -279,7 +279,7 @@ nav {
   }
 }
 
-.-item {
+.item {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -367,7 +367,7 @@ nav {
   margin-top: 2em;
 }
 
-.-no-repos {
+.no-results {
   width: 100%;
   margin: 0.5em 0 0 1em;
   padding: 1.2em 1em;
