--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -79,7 +79,7 @@ body.theme-light {
     background: var(--color-white);
   }
 
-  .-item {
+  .item {
     background-color: var(--color-white);
     border: 1px solid var(--color-bg-dark);
   }
