--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -201,6 +201,11 @@
   }
 }
 
+// button with white color
+.button.-icon.-white {
+  color: var(--color-white);
+}
+
 // deal with button groupings
 .buttons .button:not(:last-child) {
   margin-right: 0.5rem;
