--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1546,3 +1546,59 @@ nav {
   display: flex;
   align-items: center;
 }
+
+.cli-help {
+  position: relative;
+}
+
+.cli-help .-tooltip {
+  background: var(--color-bg-dark);
+  border: solid var(--line-width) var(--color-bg-light);
+  position: absolute;
+  top:105%;
+  top: calc((100% + .5rem));
+  z-index: 999999;
+  right:0;
+  width: 800px;
+  padding: 8px 4px;
+}
+
+.cli-help .-header {
+  margin: 0px 0px 0px 8px;
+}
+
+.cli-help .-command {
+  background: var(--color-focus);
+  padding: 4px 8px;
+  margin: 0px 4px;
+}
+
+.cli-help .-arrow {
+  top: calc((.5rem + 1px) * -1);
+}
+.cli-help .-arrow {
+  position: absolute;
+  display: block;
+  width: 1rem;
+  height: .5rem;
+  margin: 0 .3rem;
+  right: 0;
+}
+.cli-help .-tooltip .-arrow::before {
+  top: 0;
+  border-bottom-color: rgba(0,0,0,.25);
+}
+.cli-help .-tooltip .-arrow::after {
+  top: 1px;
+  border-bottom-color: var(--color-bg-light);
+}
+.cli-help .-arrow::after, .cli-help .-arrow::before {
+  border-width: 0 .5rem .5rem .5rem;
+}
+.cli-help .-arrow::after, .cli-help .-arrow::before {
+  position: absolute;
+  display: block;
+  content: "";
+  border-color: transparent;
+  border-style: solid;
+}
