--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1147,6 +1147,7 @@ nav {
 .icon.favorite-star {
   fill: none;
   stroke: var(--color-yellow);
+  stroke-width: var(--line-width);
 }
 
 .icon.favorite-star.favorited {
