--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -787,7 +787,7 @@ nav {
 .focus-log {
   padding: 0 1em;
 
-  color: var(--color-offwhite);
+  color: var(--color-primary);
   font-size: 14px;
   font-family: var(--font-code);
 
@@ -802,7 +802,7 @@ nav {
 .logs .line .-line-num {
   display: flex;
 
-  color: var(--color-offwhite);
+  color: var(--color-primary);
 
   font-family: var(--font-code);
 
