--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -557,9 +557,21 @@ nav {
 
 .recent-build {
   position: relative;
+
+  display: flex;
+  /* stop container from blocking child links */
+  pointer-events: none;
 }
 
-.recent-build.-current > svg {
+.recent-build-link {
+  /* 
+    maintain link functionality when 
+    using pointer-events: none; on the container
+  */
+  pointer-events: initial;
+}
+
+.recent-build.-current {
   transform: translateX(5px);
 
   transition: transform 0.1s;
@@ -567,7 +579,7 @@ nav {
   will-change: transform;
 }
 
-.recent-build.-older > svg {
+.recent-build.-older {
   transform: translateX(10px);
 
   transition: transform 0.1s;
@@ -575,7 +587,7 @@ nav {
   will-change: transform;
 }
 
-.build-history .recent-build .-icon {
+.build-history .recent-build-link .-icon {
   fill: none;
   stroke: var(--color-bg);
 
@@ -600,10 +612,10 @@ nav {
   }
 }
 
-.recent-build .tooltip {
+.recent-build-tooltip {
   position: absolute;
-  top: 125%;
-  // not sure what to here to display the tooltip on top!
+  top: calc(100% + 10px);
+
   z-index: 9999;
 
   display: flex;
@@ -624,15 +636,15 @@ nav {
   visibility: hidden;
 }
 
-.recent-build:hover .tooltip,
-.recent-build:focus .tooltip {
+.recent-build:hover .recent-build-tooltip,
+.recent-build:focus .recent-build-tooltip {
   visibility: visible;
 }
 
-.recent-build:hover .tooltip::after,
-.recent-build:focus .tooltip::after {
+.recent-build:hover .recent-build-tooltip::after,
+.recent-build:focus .recent-build-tooltip::after {
   position: absolute;
-  bottom: 100%; /* At the top of the tooltip */
+  bottom: 100%;
 
   margin-left: 0.5em;
 
@@ -644,31 +656,19 @@ nav {
   content: ' ';
 }
 
-.build-history .recent-build .-info {
-  padding: 0.2em 0.6em;
-
-  font-size: 14px;
-}
-
-.build-history .recent-build .-line {
+.recent-build-tooltip .line {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-.build-history .-line.-header {
+.recent-build-tooltip .header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-.build-history .-label {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-}
-
-.build-history .recent-build .-number {
+.recent-build-tooltip .number {
   margin-right: 0.5em;
 
   &:before {
@@ -676,7 +676,19 @@ nav {
   }
 }
 
-.build-history .recent-build .-event {
+.recent-build-tooltip .info {
+  padding: 0.2em 0.6em;
+
+  font-size: 14px;
+}
+
+.recent-build-tooltip .label {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.recent-build-tooltip .event {
   font-style: italic;
 }
 
